--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -18,6 +18,7 @@
     font-family: var(--text-font);
     color: var(--text-color);
     text-align: center;
+    font-display: swap;
 }
 /** General **/
 a {
