--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -19,7 +19,8 @@
         font-family: var(--text-font);
         color: var(--text-color);
         text-align: center;
-        margin: 0 auto;   
+        margin: 0 auto;
+        font-display: swap;
     }
 
     /** General **/
