--- a/scoots/styles/larger.css
+++ b/scoots/styles/larger.css
@@ -3,11 +3,15 @@
 @media (min-width: 800px) {
     :root {
         --page-border-radius: 0.8rem;
-        --base-color: #AC2B32;
+        --old-base-color: #AC2B32;
+        --base-color: #9f232c;
         --text-hover: #fed89c;
     }
 
     /** Navigation **/
+    nav {
+        background-color: var(--base-color);
+    }
     #menu {
         display: none;
     }
